--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,45 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quantico:wght@700&display=swap');
 
-#body {
+
+ #body {
     display: flex;
     /*justify-content: center;*/
     /*align-items: center;*/
     background-image: url('images/kanye-west.jpeg');
-    background-size: 100%;
+    background-size: 100% 100%;
     padding-top: 40px;
     padding-left: 80px;
-    padding-bottom: 600px;
-}
+    padding-right: 40px;
+    margin-bottom: 0px;
+  }
+  
+  
+  #quote {
+    text-transform: uppercase;
+    background-image: linear-gradient(-225deg,
+        #231557 0%,
+        #44107a 29%,
+        #ff1361 67%,
+        #fff800 100%);
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    padding-top: 150px;
+    padding-left: 480px;
+    padding-right: 0px;
+    font-size: 40px;
+    height: 800px;
+  }
+
+
 
 input[type="submit"] {
   display: block;
@@ -49,29 +78,6 @@ input[type="submit"]:focus {
     to {
         transform: rotate(360deg);
     }
-}
-
-#quote {
-    text-transform: uppercase;
-    background-image: linear-gradient(-225deg,
-            #231557 0%,
-            #44107a 29%,
-            #ff1361 67%,
-            #fff800 100%);
-    background-size: auto auto;
-    background-clip: border-box;
-    background-size: 200% auto;
-    color: #fff;
-    background-clip: text;
-    text-fill-color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: textclip 2s linear infinite;
-    display: inline-block;
-    padding-top: 150px;
-    padding-left: 480px;
-    padding-right: 0px;
-    font-size: 40px;
 }
 
 @keyframes textclip {
@@ -178,19 +184,56 @@ input[type="submit"]:focus {
   padding-top:24px;
   opacity:0.3;
   font-size:13px;
-  margin-bottom:0;
+  margin-bottom: 0;
 }
 
 /*https://epicbootstrap.com/snippets/footer-dark*/
-
 #footer {
-
+  
 }
 
-.github{
+.github {
     text-align: center;
     font-size: 20px;
     color: white;
     padding-top: 40px;
-    font-family: Verdana,"Rockwell",Helvetica,Serif;
+    font-family: Verdana, "Rockwell", Helvetica, Serif;
 }
+
+
+/*Responsive layout*/
+/* Responsive layout - makes a one column-layout instead of two-column layout */
+@media (max-width: 800px) {
+  #body {
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-bottom: 100px;
+    padding-right: 5px;
+    background-size: 100% 700px;
+  }
+  
+  
+  #quote {
+    padding-top: 50px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    margin-left: 50px;
+    margin-right: 50px;
+    height: 500px;
+  }
+  
+  #quoteContent {
+    font-size: 20px;
+  }
+  
+  input[type="submit"] {
+    font-size: 10px;
+    width: 150px;
+    height: 150px;
+    padding: 5px;
+  }
+}
+
+
+
